# zignal

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  MATRIX_IMPROVEMENTS.md  Makefile  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  documentation.yml  python.yml  release.yml  test.yml  webdocs.yml
assets/: python_print.tape
bindings/python/: BINDINGS_GUIDE.md  CHANGELOG.md  MANIFEST.in  README.md  build_wheels.py  color.zig  color_factory.zig  color_registry.zig  fdm.zig  generate_docs.py  generate_stubs.zig  image.zig  main.zig  py_utils.zig  pyproject.toml  setup.py  update_version.py  upload_to_pypi.py
bindings/python/include/: math.h  py_arocc_patch.h
bindings/python/include/glibc/: math.h
bindings/python/scripts/: build_backend.py  build_docs.py  build_wheels.py  update_version.py  upload_to_pypi.py
bindings/python/src/: PyImage.zig  bitmap_font.zig  blending.zig  border_mode.zig  canvas.zig  color.zig  color_factory.zig  color_registry.zig  color_space.zig  color_utils.zig  convex_hull.zig  enum_utils.zig  fdm.zig  generate_stubs.zig  grayscale_format.zig  image.zig  interpolation.zig  main.zig  matrix.zig  metadata_converter.zig  motion_blur.zig  optimization.zig  pca.zig  perlin.zig  pixel_iterator.zig  pixel_proxy.zig  py_utils.zig  python.zig  python_visibility_shim.h  rectangle.zig  running_stats.zig  stub_metadata.zig  transforms.zig
bindings/python/src/image/: binary.zig  core.zig  filtering.zig  numpy_interop.zig  transforms.zig
bindings/python/tests/: __init__.py  test_bitmap_font.py  test_blending.py  test_canvas.py  test_colors.py  test_comprehensive.py  test_convex_hull.py  test_fdm.py  test_image.py  test_image_iter.py  test_matrix.py  test_numpy.py  test_optimization.py  test_pca.py  test_perlin.py  test_pixel_assignment.py  test_rectangle.py  test_running_stats.py  test_transforms.py
bindings/python/zignal/: __init__.py  cli.py
examples/: Makefile  README.md  build.zig  build.zig.zon  index.html
examples/lib/: colorspace.html  colorspace.js  face-alignment.html  face-alignment.js  index.html  perlin-noise.html  perlin-noise.js  perlin.html  perlin.js  seam-carving.js  styles.css
examples/src/: blur_box_vs_gaussian.zig  colorspace.zig  colorspaces.zig  contrast_enhancement.zig  convolution_benchmark.zig  convolution_comparison_benchmark.zig  convolution_demo.zig  edge_detection.zig  face_alignment.zig  fdm.zig  feature_matching.zig  image_demo.zig  js.zig  make_logo.zig  metrics.zig  motion_blur_demo.zig  orb_demo.zig  pca_example.zig  perlin_noise.zig  png_example.zig  seam_carving.zig  test_library_convolution.zig  whitebalance.zig
examples/web/: colorspace.html  colorspace.js  colorspaces.html  colorspaces.js  contrast-enhancement.html  contrast-enhancement.js  face-alignment.html  face-alignment.js  fdm.html  fdm.js  feature_matching.html  feature_matching.js  index.html  metrics.html  metrics.js  perlin-noise.html  perlin-noise.js  seam-carving.html  seam-carving.js  styles.css  utils.js  white-balance.html
src/: TerminalSupport.zig  bdf.zig  blending.zig  canvas.zig  cli.zig  color.zig  colorspace.zig  deflate.zig  draw.zig  fdm.zig  features.zig  font.zig  geometry.zig  hungarian.zig  image.zig  jpeg.zig  kitty.zig  main.zig  matrix.zig  meta.zig  optimization.zig  pca.zig  perlin.zig  plot.zig  png.zig  point.zig  root.zig  sixel.zig  stats.zig  svd.zig  terminal.zig  tests.zig  version.zig  zignal.zig
src/canvas/: Canvas.zig
src/cli/: args.zig  blur.zig  common.zig  diff.zig  display.zig  edge.zig  edges.zig  fdm.zig  info.zig  metrics.zig  resize.zig  stats.zig  tile.zig  version.zig  view.zig
src/color/: Hsl.zig  Hsv.zig  Lab.zig  Lch.zig  Lms.zig  Oklab.zig  Oklch.zig  Rgb.zig  Rgba.zig  (+6 more)
(+92 files in other folders)
