[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zignal-processing"
version = "0.5.0"
description = "Zero-dependency image processing library"
readme = "README.md"
authors = [{name = "zignal contributors"}]
license = "MIT"
requires-python = ">=3.10"
keywords = ["image-processing", "computer-vision", "zig", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bfactory-ai/zignal"
Repository = "https://github.com/bfactory-ai/zignal"
Documentation = "https://bfactory-ai.github.io/zignal/python/zignal.html"
Issues = "https://github.com/bfactory-ai/zignal/issues"

[project.optional-dependencies]
test = ["pytest", "numpy"]
docs = ["pdoc"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ty",
    "ruff",
    "numpy",
    "pdoc",
    "setuptools>=45",
    "wheel",
    "build",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
